# document-binarization

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
binarization/: __init__.py
binarization/core/: __init__.py  base.py  config.py  pipeline.py
binarization/dataset/: __init__.py  loader.py
binarization/enhancement/: __init__.py  connection.py  separation.py  stroke.py
binarization/evaluation/: __init__.py  metrics.py  ocr.py
binarization/methods/: README.md  __init__.py  adaptive_methods.py  advanced_methods.py  global_methods.py  registry.py
binarization/optimization/: __init__.py  optimizer.py
binarization/postproc/: __init__.py  components.py  filters.py  morphology.py
binarization/utils/: __init__.py  image.py  logger.py
configs/: default.yaml
configs/presets/: degraded.yaml  photographed.yaml  scanned_documents.yaml
docker/: Dockerfile  docker-compose.yml  requirements-docker.txt
docs/: ALGORITHMS.md  API.md  EXPERIMENTS.md  USAGE.md
scripts/: binarize.py  evaluate.py  experiment.py  optimize.py
tests/: conftest.py
tests/test_core/: test_pipeline.py
tests/test_enhancement/: test_stroke.py
tests/test_evaluation/: test_metrics.py
tests/test_methods/: test_adaptive.py  test_advanced.py  test_global.py
tests/test_postproc/: test_morphology.py
